# json-bucket

./: Cargo.toml  Dockerfile  README.md  build.sh  entrypoint.sh  push.sh
src/: aggregate_body.rs  db.rs  error.rs  filters.rs  handlers.rs  inserts.rs  main.rs  mongo.rs  request_body.rs  server.rs  state.rs  transform.rs
